[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arch>=7.2.0",
    "asyncio-mqtt>=0.16.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.48.1",
    "ta>=0.11.0",
    "tensorflow>=2.20.0",
    "websockets>=15.0.1",
    "yfinance>=0.2.65",
]
